<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <EditText
        android:id="@+id/registerUser_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="300dp"
        android:layout_height= "300dp"
        android:layout_marginTop="20dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhoto"
        app:layout_constraintTop_toBottomOf="@+id/user_image"
        app:layout_constraintEnd_toStartOf="@+id/image_galery_button"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/image_galery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galleryImage"
        app:layout_constraintTop_toBottomOf="@+id/user_image"
        app:layout_constraintStart_toEndOf="@id/camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/registerUser_real_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/registerUser_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname" />

    <CheckBox
        android:id="@+id/registerUser_challenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenger" />

    <CheckBox
        android:id="@+id/registerUser_supervisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supervisor" />

    <Button
        android:id="@+id/registerUser_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>
