<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.appmovil24.starproyect.ui.home.HomeFragment"
        android:label="@string/challenge_posts_list_menu_item"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.appmovil24.starproyect.ui.userProfile.UserProfileFragment"
        android:label="@string/user_profile_menu_item"
        />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.appmovil24.starproyect.ui.preferences.PreferencesFragment"
        android:label="@string/preferences_menu_item"
        />
</navigation>