<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/preferences_separator"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/preferences_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_button"
        app:layout_constraintBottom_toTopOf="@+id/change_language_button"
        />

    <RadioGroup
        android:id="@+id/change_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textSize="25dp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="378dp" />

        <RadioButton
            android:id="@+id/select_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="428dp" />

        <RadioButton
            android:id="@+id/select_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="428dp" />

        <RadioButton
            android:id="@+id/select_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="428dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>