<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.feed.Feed">

    <!-- Menu -->
    <Button
        android:id="@+id/preferences_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        app:layout_constraintEnd_toStartOf="@id/preferences_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/user_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        app:layout_constraintEnd_toStartOf="@id/publish_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!-- Fragment del Feed -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_competencia_detail"

        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/primary_details_nav_graph"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
