<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_detail_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MergeRootFrame"
    android:fillViewport="true"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Votacion para el resultado de la competencia -->

        <TextView
            android:id="@+id/home_detail_publishers_vote"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/home_detail_opponents_vote"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_publishers_vote"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/home_detail_supervisors_vote"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_opponents_vote"
            android:visibility="gone"
            />

        <!-- Baja y modificacion de la publicacion -->

        <Button
            android:id="@+id/home_detail_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_supervisors_vote"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/home_detail_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_delete_button"
            android:visibility="gone"
            />

        <!-- Informacion de la publicacion -->

        <TextView
            android:id="@+id/home_detail_discipline"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_edit_button"
            />

        <TextView
            android:id="@+id/home_detail_date"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_discipline"
            />

        <TextView
            android:id="@+id/home_detail_schedule"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_date"
            />

        <org.osmdroid.views.MapView
            android:id="@+id/challenge_post_location"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_schedule"
            />

        <!-- Retador , Publisher-->

        <TextView
            android:id="@+id/home_detail_publisher"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publisher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_post_location"
            />

        <ImageView
            android:id="@+id/home_detail_publisher_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_publisher"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/home_detail_publisher_wins_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_challenge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_publisher_image"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/home_detail_publisher_full_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_publisher_wins_button"
            />

        <TextView
            android:id="@+id/home_detail_publisher_score"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_publisher_full_name"
            />

        <!-- Contrincante -->

        <TextView
            android:id="@+id/home_detail_opponent"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opponent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_publisher_score"
            />

        <Button
            android:id="@+id/home_detail_accept_challenge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_challenge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_opponent"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/home_detail_opponent_image"
            android:layout_width="300dp"
            android:layout_height= "300dp"
            android:layout_marginTop="20dp"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_accept_challenge_button"
            />

        <Button
            android:id="@+id/home_detail_opponent_wins_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_challenge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_opponent_image"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/home_detail_opponent_full_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_opponent_wins_button"
            />

        <TextView
            android:id="@+id/home_detail_opponent_score"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_opponent_full_name"
            />

        <!-- Fizcalizador -->

        <TextView
            android:id="@+id/home_detail_supervisor"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supervisor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_opponent_score"
            />

        <ImageView
            android:id="@+id/home_detail_supervisor_image"
            android:layout_width="300dp"
            android:layout_height= "300dp"
            android:layout_marginTop="20dp"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_supervisor"
            />

        <TextView
            android:id="@+id/home_detail_supervisor_full_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_supervisor_image"
            />

        <Button
            android:id="@+id/home_detail_supervise_challenge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervise_challenge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_supervisor_full_name"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/home_detal_empty_space"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_supervise_challenge_button"
            android:layout_marginTop="40dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>